# hopa

./: CMakeLists.txt  Dockerfile  README.md  output.fa  setup_docker.sh
docker/: cmake.dkr  install.dkr
dockerfiles/: setup_alpine.sh  setup_ubuntu.sh
dockerfiles/alpine/: cmake.dkr  install.dkr
include/: aligner.hpp  arg_parse.hpp
src/: CMakeLists.txt  aligner.cpp  arg_parse.cpp  main.cpp
test/: hopa_output.fa  hopa_output_mafft.fa  intermediate_order.fa
